--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Install Python dependencies
-        run: pip3 install -U PyGithub
+        run: pip3 install -U PyGithub tabulate
 
       - name: Checkout
         uses: actions/checkout@v4
