add a concurrency setting to limit the number of parallel workflows

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -12,6 +12,10 @@ defaults:
   run:
     shell: bash
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
