Add requirements.txt file
Add a requirements.txt file listing the the required Python packages
and use it in both documentation and CI.

Signed-off-by: Henrik Brix Andersen <hebad@vestas.com>

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -22,11 +22,11 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
-      - name: Install Python dependencies
-        run: pip3 install -U PyGithub tabulate
-
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Python dependencies
+        run: pip3 install -U -r requirements.txt
 
       - name: Update
         env:
